<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="shibedays.com.reptimer.TimerActivity"
    tools:showIn="@layout/activity_timer">

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_large"
        android:text="@string/default_time" />

    <TextView
        android:id="@+id/rep_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="53dp"
        android:layout_toStartOf="@+id/time_view"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_large"
        android:text="@string/default_rep" />

    <TextView
        android:id="@+id/round_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/rep_view"
        android:layout_marginStart="53dp"
        android:layout_toEndOf="@+id/time_view"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_large"
        android:text="@string/default_round" />
</RelativeLayout>
